[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2"
hex = "0.4"
rand = "0.9.2"
dotenvy = "0.15.7"
rayon = "1.11.0"
serde_repr = "0.1.20"
