[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "manage-permissions"
path = "src/bin/manage_permissions.rs"

[[bin]]
name = "translate-operators"
path = "src/bin/translate_operators.rs"

[[bin]]
name = "generate-dps-tests"
path = "src/bin/generate_dps_tests.rs"

[[bin]]
name = "db-backup"
path = "src/bin/db_backup.rs"

[[bin]]
name = "sync-scores"
path = "src/bin/sync_scores.rs"

[[test]]
name = "dps_comparison_test"
path = "tests/dps_comparison/dps_comparison_test.rs"

[[test]]
name = "score_calculation_test"
path = "tests/score_calculation/score_calculation_test.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "set-header", "compression-gzip"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
base64 = "0.22"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2"
hex = "0.4"
rand = "0.9.2"
dotenvy = "0.15.7"
rayon = "1.11.0"
serde_repr = "0.1.20"
regex = "1.12.2"
flate2 = "1.1.8"
redis = { version = "1.0.3", features = ["aio", "tokio-comp"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
colored = "3"
unicode-normalization = "0.1"
subtle = "2"

# S3-compatible storage support
rust-s3 = "0.34"
futures = "0.3"
anyhow = "1.0"
log = "0.4"

# Database backup/restore tool
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
indicatif = "0.18"
dialoguer = "0.12"

# TTL-based cache for rate limiting
moka = { version = "0.12", features = ["future"] }

# Use jemalloc for better memory management (returns memory to OS)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
