[package]
name = "arknights-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
cipher = "0.4.4"
crossterm = "0.29.0"
hex-literal = "1.1.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
unity-rs = { path = "../unity-rs" }
rayon = "1.11.0"
chrono = "0.4.42"
indicatif = "0.18.3"
rand = "0.9"
crossbeam = "0.8.4"
regex = "1.12.2"
# TODO: Re-enable lzma/xz features once lzma-rust2 fixes crc dependency (uses crc 3.x API but depends on crc 2.x)
# See: https://github.com/gendx/lzma-rs/issues/182
zip = { version = "7.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate64", "deflate", "time", "zstd"] }
image = "0.25"
bson = { version = "3.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
