[package]
name = "unity-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.4", features = ["std"] }
once_cell = "1.19"
log = "0.4"
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
regex = "1.10"
bitflags = "2.4"
hex = "0.4"
flate2 = "1.0"
lz4 = "1.24"
brotli = "3.4"
lzma-rs = "0.3"
zip = "0.6"
thiserror = "1.0"
pyo3 = { version = "0.27", features = ["auto-initialize"] }
image = { version = "0.25", features = ["png"] }
imageproc = "0.25"
texpresso = "2.0"
texture2ddecoder = { version = "0.1", features = ["alloc"] }
bcdec_rs = "0.2"
yuv = "0.8"
libfmod = "2.222"
lazy_static = "1.4"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.4"

# Main binary (src/main.rs)
[[bin]]
name = "unity-rs"
path = "src/main.rs"

[[bin]]
name = "classes_generator"
path = "src/generators/classes_generator.rs"

[[bin]]
name = "class_id_map_generator"
path = "src/generators/class_id_map_generator.rs"

# Library (src/lib.rs)
[lib]
name = "unity_rs"
path = "src/lib.rs"
