[package]
name = "unity-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.7", features = ["std"] }
once_cell = "1.21"
log = "0.4"
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
regex = "1.12"
bitflags = "2.10"
hex = "0.4"
flate2 = "1.1"
lz4 = "1.28"
brotli = "8.0"
lzma-rs = "0.3"
# TODO: Re-enable lzma/xz features once lzma-rust2 fixes crc dependency (uses crc 3.x API but depends on crc 2.x)
# See: https://github.com/gendx/lzma-rs/issues/182
zip = { version = "7.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate64", "deflate", "time", "zstd"] }
thiserror = "2.0"
pyo3 = { version = "0.27", features = ["auto-initialize"] }
image = { version = "0.25", features = ["png"] }
imageproc = "0.26"
texpresso = "2.0"
texture2ddecoder = { version = "0.1", features = ["alloc"] }
bcdec_rs = "0.2"
yuv = "0.8"
libfmod = "2.222"
lazy_static = "1.5"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.24"
walkdir = "2.5"

# Main binary (src/main.rs)
[[bin]]
name = "unity-rs"
path = "src/main.rs"

[[bin]]
name = "classes_generator"
path = "src/generators/classes_generator.rs"

[[bin]]
name = "class_id_map_generator"
path = "src/generators/class_id_map_generator.rs"

# Library (src/lib.rs)
[lib]
name = "unity_rs"
path = "src/lib.rs"
