[package]
name = "assets-unpacker"
version = "0.1.0"
edition = "2021"

[dependencies]
unity-rs = { path = "../unity-rs" }

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Image processing
image = "0.25"
imageproc = "0.25"

# Audio processing
hound = "3.5"

# Concurrency
rayon = "1.8"
crossbeam-channel = "0.5"
indicatif = "0.17"
once_cell = "1.19"
num_cpus = "1.16"

# Logging
log = "0.4"
env_logger = "0.10"

# For manifest timestamps
chrono = "0.4"

# Utilities
walkdir = "2.4"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
sysinfo = "0.31"

# AES decryption for encrypted assets
aes = "0.8"
cbc = "0.1"
cipher = "0.4"

# BSON support for decoded data
bson = "3.1"

# FlatBuffers support (serialize feature enables serde::Serialize for Vector types)
flatbuffers = { version = "25.9", features = ["serialize"] }
base64 = "0.22.1"
