[package]
name = "assets-unpacker"
version = "0.1.0"
edition = "2021"

[dependencies]
unity-rs = { path = "../unity-rs" }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Image processing
image = "0.25"
imageproc = "0.26"

# Audio processing
hound = "3.5"

# Concurrency
rayon = "1.11"
crossbeam-channel = "0.5"
indicatif = "0.18"
once_cell = "1.21"
num_cpus = "1.17"

# Logging
log = "0.4"
env_logger = "0.11"

# For manifest timestamps
chrono = "0.4"

# Utilities
walkdir = "2.5"
regex = "1.12"
thiserror = "2.0"
anyhow = "1.0"
sysinfo = "0.37"

# AES decryption for encrypted assets
aes = "0.8"
cbc = "0.1"
cipher = "0.4"

# BSON support for decoded data
bson = { version = "3.1", features = ["serde"] }

# FlatBuffers support (serialize feature enables serde::Serialize for Vector types)
flatbuffers = { version = "25.12", features = ["serialize"] }
base64 = "0.22.1"
