[package]
name = "unpacker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate-fbs"
path = "src/bin/generate_fbs.rs"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
cbc = "0.1.2"
cipher = "0.4"
flatbuffers = "25.12.19"
hex-literal = "1.1.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
lz4 = "1.28.1"
lzma-rs = "0.3.0"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
texture2ddecoder = "0.1.2"
walkdir = "2.5.0"
