[project]
name = "ArkUnpacker"
version = "4.0.0"
description = "Arknights Assets Unpacker"
authors = [
    {name = "Harry Huang", email = "harryhuang2652@qq.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "bson (~=0.5)",
    "flatbuffers (~=25.2)",
    "numpy (~=1.26)",
    "Pillow (~=9.5)",
    "pycryptodome (~=3.22)",
    "pydub (~=0.25)",
    "UnityPy (~=1.22)",
    "setuptools (~=69.0)",
    "jaraco.functools (~=3.9)",
    "jaraco.context (~=5.3)",
    "jaraco.text (~=3.2)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "PyPI-Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
toml = "0.10.2"
pyinstaller = "6.12.0"

[tool.build]
build-dir = "$project$/build"
entry = "$project$/Main.py"
icon = "$project$/ArkUnpacker.ico"
add-binary = "$venv$/site-packages/UnityPy/lib:UnityPy/lib|$venv$/site-packages/UnityPy/resources/uncompressed.tpk:UnityPy/resources"
add-data = "$project$/src/fbs/CN:src/fbs/CN|$venv$/site-packages/archspec/json:archspec/json"
hidden-import = "flatbuffers|UnityPy.resources|pkg_resources.py2_warn|pkg_resources._vendor.jaraco.functools|pkg_resources._vendor.jaraco.context|pkg_resources._vendor.jaraco.text"
log-level = "WARN"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
